kickseed (0.56) UNRELEASED; urgency=low

  * Preseed partman-lvm/confirm_overwrite as well as partman-lvm/confirm.
  * Preseed partman-lvm/device_remove_lvm when confirming logvol results,
    since Kickstart doesn't have a separate control with a one-to-one
    correspondence to this (LP: #708548).

 -- Colin Watson <cjwatson@debian.org>  Fri, 28 Jan 2011 17:50:32 +0000

kickseed (0.55) unstable; urgency=low

  * Preseed mirror/country to "manual" instead of "enter information
    manually"; support for the latter has been dropped (LP: #662931).

 -- Colin Watson <cjwatson@debian.org>  Wed, 03 Nov 2010 23:56:04 +0000

kickseed (0.54) unstable; urgency=low

  * Add Vcs-Svn field.
  * Add notes about why templates are untranslatable.
  * Only preseed partman-lvm/confirm if the logvol command was used.
  * Preseed partman/confirm_nooverwrite as well as partman/confirm.
  * Be lenient if the Kickstart file author forgets the required space after
    '@' in a %packages section (LP: #419392).

 -- Colin Watson <cjwatson@debian.org>  Sat, 27 Mar 2010 23:49:22 +0000

kickseed (0.53) unstable; urgency=low

  * Implement 'halt' and 'poweroff'.
  * Override not-using-po-debconf Lintian tag. All our templates are
    intentionally untranslatable.
  * Drop no-standards-version-field override, which Lintian no longer emits
    for udebs.
  * Upgrade to debhelper v7.
  * Implement 'repo', with some Debian extensions to handle the sources.list
    format.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 10 Aug 2009 15:23:12 +0100

kickseed (0.52) unstable; urgency=low

  [ Colin Watson ]
  * Fix exit code handling from ks_run_script.

 -- Christian Perrier <bubulle@debian.org>  Thu, 11 Jun 2009 22:05:24 +0200

kickseed (0.51) unstable; urgency=low

  * Add initial LVM support (LP: #120377). There are probably still some
    warts here.
  * Use new-style "-1" instead of a big number (1024 * 1024 * 1024) to
    indicate unlimited partition size in partman recipes, following