@@ -4,6 +4,10 @@ kickseed (0.56) UNRELEASED; urgency=low
   * Preseed partman-lvm/device_remove_lvm when confirming logvol results,
     since Kickstart doesn't have a separate control with a one-to-one
     correspondence to this (LP: #708548).
+  * Don't perform an extra layer of backslash interpretation when reading
+    lines from Kickstart files (LP: #715746).  Note that this may break some
+    existing Kickstart files that tried to work around the previous
+    behaviour; this seems like the lesser of two evils.
 
  -- Colin Watson <cjwatson@debian.org>  Fri, 28 Jan 2011 17:50:32 +0000
 
